--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -194,6 +194,9 @@
 
 	&__text {
 		flex: 1 1 48%;
+		p {
+			text-wrap: unset;
+		}
 	}
 }
 
